# -c-11

./: 1.assert.cpp  10.mobileSemantics_and_perfectForward.cpp  11.explicit_conversion_operator.cpp  12.list_initialization.cpp  13.POD_type.cpp  14.unrestricted_union.cpp  15.user_defined_literals.cpp  16.inline_namespace.cpp  17.template_alias.cpp  18.SFINEA_rule.cpp  19.auto_derive.cpp  2.noexcept.cpp  20.decltype_derive.cpp  21.trace_return_type.cpp  22.for_loop.cpp  23.strongly_typed_enum.cpp  24smart_pointer.cpp  25.constant_expression.cpp  26.variable_length_template.cpp  27.atomic.cpp  28.control_defaultFunc.cpp  29.lambda.cpp  3.init.cpp  30.alignment.cpp  31.general_properties_unicode.cpp  4.snotstatic_member_sizeof.cpp  5.final_override.cpp  6.template_function_default_parameters.cpp  7.Local_and_anonymous_types_as_template_arguments.cpp  8.inherited_constructor.cpp  9.delegate_constructor.cpp  CMakeLists.txt  README.md  new_word.md  test.cpp
